<resources>
    <string name="app_name">Laundry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enterLogin">Email</string>
    <string name="enterPassword">Password</string>
    <string name="enter">Enter</string>
    <string name="show">Signup</string>
    <string name="signup">signup</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email_name">EMAIL</string>
    <string name="phone_name">"PHONE "</string>
    <string name="password">PASSWORD</string>
    <string name="back">back</string>
    <string name="Access_Done">ACCESS SUCCESS</string>


    <!-- View pager names of fragments -->
    <string name="LOGIN">LOGIN</string>
    <string name="SIGNUP">SIGNUP</string>
    <string name="content_description_person">Ic_person_app_bar</string>
    <string name="content_description_favorite">ic_person</string>
    <string name="client_home_text_subscribe">Subscribe to Laundry+ to get monthly worth of laundry</string>
    <string name="client_welcome">Welcome</string>
    <string name="client_home_back">Back</string>
    <string name="mr_dmitry">Mr. Dmitry</string>
    <string name="complete_order">Complete order</string>
    <string name="toolbar_checkout">Checkout</string>
    <string name="checkout">Checkout</string>
    <string name="address_details">Address details</string>
    <string name="change">change</string>
    <string name="pick_up">Pick Up</string>
    <string name="adddres_text">Road D3 House 23, Pen Slack VIllage Lokogoma abuja</string>
    <string name="phone_text">+234 9053202443</string>
    <string name="delivery_method">Delivery method</string>
    <string name="normal">Normal</string>
    <string name="semi_express">Semi-Express</string>
    <string name="express">Express</string>
    <string name="pickup_date_and_time">Pickup date and time</string>
    <string name="total">Total</string>
    <string name="_7_700">₦7,700</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="aed">AED</string>
    <string name="ironing">Ironing</string>
    <string name="order">Order #</string>
    <string name="order_num">Order #</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter password</string>
    <string name="password_signup">Password</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_address">Email address</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="name">Name</string>
    <string name="tick_box_if_you_register_as_n_service_provider">Tick box if you register as\n Service Provider</string>

    <!-- View pager names of fragments -->
    <string-array name="drop_down_home_item">
        <item>T-shirt for man T-shirt for man</item>
        <item>Jacket for woman</item>
        <item>Skirt for kinder</item>
    </string-array>

</resources>