<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey_200"
    tools:context="presentation.servicedetails.ServiceProviderDetFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp">


            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/light_grey_200"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_view_title" />

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppins"
                android:text="@string/toolbar_checkout"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/image_button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="34dp"
                android:background="@color/light_grey_200"
                android:src="@drawable/ic_baseline_logout_24"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/light_grey_200"
        app:cardElevation="0dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey_200">

            <TextView
                android:id="@+id/text_view_service_order"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/order_num"
                android:textColor="@color/black"
                android:textSize="@dimen/text_34"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_view_order_num"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_order_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/poppins"
                android:text="1000"
                android:textColor="@color/black"
                android:textSize="@dimen/text_34"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_view_service_order"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/text_view_address_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/address_details"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/card_view_service_details"
        app:layout_constraintTop_toBottomOf="@+id/card_order" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_service_details"
        android:layout_width="312dp"
        android:layout_height="160dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_address_details">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/edit_text_person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/mr_dmitry"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/adddres_text"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_16"
                app:layout_constraintStart_toStartOf="@+id/edit_text_person_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_person_name" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/phone_text"
                android:inputType="phone"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_16"
                app:layout_constraintStart_toStartOf="@+id/edit_text_address"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_address" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_service_provider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="60dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_service_details"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>