<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_order_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_grey_200"
    tools:context=".presentation.client.category.HomeClientFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/ser_prov_card"
        android:layout_width="344dp"
        android:layout_height="95dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="1dp"
        android:foregroundGravity="center"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:src="@drawable/ic_checkbox_t_shirt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_order"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="12dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_view_order"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/order"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_view_order_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/poppins"
                        android:hint="3"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/text_14"
                        app:layout_constraintStart_toEndOf="@+id/textView22"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/price"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/text_view_price_for_order"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/text_view_price_for_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:fontFamily="@font/poppins"
                        android:hint="1500"
                        android:textSize="@dimen/text_12"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/text_view_aed_service" />


                    <TextView
                        android:id="@+id/text_view_aed_service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:layout_marginBottom="3dp"
                        android:text="@string/aed"
                        android:textSize="@dimen/text_10"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />




                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/text_view_order_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/poppins"
                        android:hint="300"
                        android:textSize="@dimen/text_12"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/text_view_aed"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_view_aed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="28dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/aed"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/text_10"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_view_date"
                        android:layout_width="wrap_content"
                        android:layout_height="19dp"
                        android:layout_marginEnd="28dp"
                        android:fontFamily="@font/poppins"
                        android:hint="01 Jul"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/text_14"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_order_price" />

                </androidx.constraintlayout.widget.ConstraintLayout>



            </androidx.cardview.widget.CardView>


                </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>